Adicionado logo, os itens de navegaçao e o nome do usuario

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 <body>
     <header>
         <div class="logo"></div>
-        <nav class="itens-bar"></nav>
+        <nav class="itens-bar">
+            <a href="" class="home">Home</a>
+            <a href="Eventos">Eventos</a>
+            <a href="Usuarios">Usuários</a>
+            <a href="">Relatórios</a>
+        </nav>
 
         <div class="user">
             <div class="icon-user"></div>
-            <div class="name-user"></div>
+            <div class="name-user"><p>Igor Gonçalves</p></div>
         </div>
     </header>
 </body>
