Terminado o estilo do Header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
         <div class="user">
             <div class="icon-user"></div>
-            <div class="name-user"><p>Igor Gonçalves</p></div>
+            <div class="name-user"><p>Igor Gonçalves</p>
+            <span>Desconectar</span></div>
         </div>
     </header>
 </body>
