Arrumado bug que a pagina entrava sem botao selecionados

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo"></div>
         <nav class="itens-bar">
-            <a onclick="clicou(0)">Home</a>
+            <a onclick="clicou(0)" class='selected'>Home</a>
             <a onclick="clicou(1)"> Usuários</a>
             <a onclick="clicou(2)"> Relatórios</a>
             <a onclick="clicou(3)"> Eventos</a>
