--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             for(const botao of buttons){
                 botao.classList.remove('selected')
             }
+
             buttons[value].classList.add('selected')
+            alert(buttons[value].textContent)
         }
 
     </script>
