Adicionado o toggle do menu

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
             alert(buttons[value].textContent)
         }
     </script>
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
