Criado o pop-up

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
         </nav>
     </header>
-
-
-
-
+    <section class="pop-up showing">
+        <div class="content">
+            <div class="header">teste</div>
+        </div>
+    </section>
     <main>
         <div class="select">
             <p>Olá <span>Igor Gonçalves</span>, selecione uma das opções abaixo:</p>
